--- a/src/Topxia/WebBundle/Resources/views/Course/Widget/course-price.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Widget/course-price.html.twig
@@ -25,7 +25,7 @@
       {% if priceType == 'coin' %}
         <span class="origin-price"><del>{{course.originPrice * setting('coin.cash_rate')}} {{setting('coin.coin_name', '虚拟币'|trans)}}</del></span>
       {% else %}
-        <span class="origin-price"><del>{{'%originPrice%元'|trans({'originPrice': course.originPrice})}}</del></span>
+        <span class="origin-price"><del>{{'%originPrice%元'|trans({'%originPrice%': course.originPrice})}}</del></span>
       {% endif %}
     {% endif %}
 
