fix: 引入权限后公开课menu配置

--- a/src/Topxia/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/layout.html.twig
@@ -117,7 +117,7 @@
 
           {% block content_header %}{% endblock %}
           
-          {% include 'PermissionBundle:Templates:tabs.html.twig' %}
+          {% block tabs %}{% include 'PermissionBundle:Templates:tabs.html.twig' %}{% endblock %}
 
           {% block capsule %}{% endblock %}
 
