fix: 系统-用户设置-默认头像

--- a/src/Topxia/AdminBundle/Resources/views/System/default-avatar-crop.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/default-avatar-crop.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TopxiaAdminBundle::layout.html.twig' %}
 
-{% set menu = 'admin_user_avatar' %}
+{% set menu = 'admin_setting_avatar' %}
 {% set script_controller = 'setting/default-avatar-crop' %}
 
 {% block main %}
