--- a/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/User/index.html.twig
@@ -49,7 +49,7 @@
 
     <button class="btn btn-primary">搜索</button>
 
-    {% if has_permission('admin_user_export') and is_plugin_installed('UserImporter') %}
+    {% if has_permission('admin_user_import') and is_plugin_installed('UserImporter') %}
       <a class="btn btn-primary mhs" id="user-export" data-toggle="modal" data-target="#modal"
          data-url="{{ path('admin_user_export') }}">导出搜索结果</a>
     {% endif %}
