--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/explore.html.twig
@@ -2,6 +2,7 @@
 
 {% set bodyClass = 'bg-blank' %}
 
+{% set siteNav = 'open/course/explore' %}
 {% set script_controller = 'open-course/open-course-explore' %}
 
 {% block title %} 公开课 - {{ parent() }}{% endblock %}
