--- a/src/Topxia/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/layout.html.twig
@@ -69,11 +69,11 @@
           <li><a href="{{ path('homepage') }}"><i class="glyphicon glyphicon-home"></i> {{'回首页'|trans}}</a></li>
 
           <li class="dropdown">
-                <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> {{ app.user.nickname }} <span class="glyphicon glyphicon-chevron-down"></span></a>
-                <ul class="dropdown-menu main-list">
-                  <li><a href="{{ path('logout') }}"><i class="glyphicon glyphicon-off"></i> {{'退出'|trans}}</a></li>
-                </ul>
-              </li>
+            <a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i> {{ app.user.nickname }} <span class="glyphicon glyphicon-chevron-down"></span></a>
+            <ul class="dropdown-menu main-list">
+              <li><a href="{{ path('logout') }}"><i class="glyphicon glyphicon-off"></i> {{'退出'|trans}}</a></li>
+            </ul>
+          </li>
         </ul>
 
       </div><!--/.navbar-collapse -->
@@ -82,6 +82,11 @@
   
   <div class="container">
     <div class="row">
+      <div style="margin: 0 15px">
+        <div class="alert alert-danger">
+          【重要】网站升级v7.2.0后，为保证正常使用，请务必及时升级插件（会员、批量导入、打折活动、学习卡、有花吗、充值）至最新版！ <a href="#">请立即升级！</a>
+        </div>
+      </div>
       {% block content %}
         <div class="col-md-2">
           {% block sidebar %}
