--- a/src/Topxia/AdminBundle/Resources/views/layout.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/layout.html.twig
@@ -82,11 +82,14 @@
   
   <div class="container">
     <div class="row">
-      <div style="margin: 0 15px">
-        <div class="alert alert-danger">
-          【重要】网站升级v7.2.0后，为保证正常使用，请务必及时升级插件（会员、批量导入、打折活动、学习卡、有花吗、充值）至最新版！ <a href="#">请立即升级！</a>
+      {% set notifies = plugin_update_notify() %}
+      {% if not notifies is empty %}
+        <div style="margin: 0 15px">
+          <div class="alert alert-danger">
+            【重要】网站升级v7.2.0后，为保证正常使用，请务必及时升级插件（{{ notifies }}）至最新版！ <a href="{{ path('admin_app_upgrades') }}">请立即升级！</a>
+          </div>
         </div>
-      </div>
+      {% endif %}
       {% block content %}
         <div class="col-md-2">
           {% block sidebar %}
