feature: 角色管理页提示

--- a/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
@@ -58,6 +58,8 @@
     {% endfor %}
   </table>
 
+  <p class="text-danger">注：初始化的4个角色，无法编辑和修改</p>
+
   {{ web_macro.paginator(paginator) }}
 
 {% endblock %}
