--- a/src/Permission/PermissionBundle/Resources/views/Role/role-modal.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/role-modal.html.twig
@@ -31,7 +31,7 @@
         <label for="code">编码</label>
       </div>
       <div class="col-md-8 controls">
-        <input type="text" id="code" name="code" {% if model == 'show' %}readOnly="true"{% endif %} class="form-control"
+        <input type="text" id="code" name="code" {% if model == 'show' or model == 'edit' %}readOnly="true"{% endif %} class="form-control"
                value="{{ role.code|default('') }}" placeholder="ROLE_ADMIN"
                data-url="{{ path('admin_role_check_code', {exclude:role.code|default('')}) }}">
       </div>
