feature: 角色管理页文案提示

--- a/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
+++ b/src/Permission/PermissionBundle/Resources/views/Role/index.html.twig
@@ -58,7 +58,11 @@
     {% endfor %}
   </table>
 
-  <p class="text-danger">注：初始化的4个角色，无法编辑和修改</p>
+  <div class="alert alert-info" role="alert">
+    <p>1、初始化的4个角色，无法编辑和删除</p>
+    <p>2、角色创建成功后编码不可修改</p>
+  </div>
+
 
   {{ web_macro.paginator(paginator) }}
 
