--- a/src/Custom/WebBundle/Resources/views/Login/index.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Login/index.html.twig
@@ -40,9 +40,9 @@
 
         <div class="form-group ">
           <div class="controls">
-            <label class="remember-me glyphicon glyphicon-ok" for="remember" >     
+            <label class="remember-me glyphicon" for="remember" >     
             </label>
-            <input id="remember" class="remember-input" type="checkbox" name="_remember_me" checked="checked"> <span> {{'七天内自动登录'|trans}}</span>
+            <input id="remember" class="remember-input" type="checkbox" name="_remember_me"> <span> {{'七天内自动登录'|trans}}</span>
           </div>
         </div>
         <div class="form-group ">
