remove index on homepage

--- a/src/Custom/WebBundle/Resources/views/Default/list-group-item-li.html.twig
+++ b/src/Custom/WebBundle/Resources/views/Default/list-group-item-li.html.twig
@@ -25,7 +25,7 @@
     {% else %}
       title = "{{'请先完成前面课程'|trans}}"
     {% endif %}
-  {% endif %}>{{ index }}.{{ postCoursePackage.course.title }}</a> 
+  {% endif %}>{{ postCoursePackage.course.title }}</a> 
 
   <i class="item-status iconfont 
       {% if postCoursePackage.course.studyStatus == 'lock' %}
