compare all code with master, remove unnecessary code change. pariwork with li zhengxiong

--- a/src/Classroom/ClassroomBundle/Resources/views/ClassroomReview/index.html.twig
+++ b/src/Classroom/ClassroomBundle/Resources/views/ClassroomReview/index.html.twig
@@ -2,7 +2,7 @@
 
 {% set script_controller = 'review/list' %}
 
-{% set menu = 'admin_classroom_review' %}
+{% set menu = 'admin_classroom_review_tab' %}
 
 {% block main %}
 
