--- a/src/Topxia/AdminBundle/Resources/views/System/cdn-setting.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/cdn-setting.html.twig
@@ -20,7 +20,29 @@
   <div class="form-group">
     <label class="col-md-2 control-label">URL</label>
     <div class="col-md-8 controls">
-      <input type="text" name="url" class="form-control" value="{{cdn.url}}">
+      <input type="text" name="defaultUrl" class="form-control" value="{{ cdn.defaultUrl|default('') }}">
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-md-2 control-label">USERURL</label>
+    <div class="col-md-8 controls">
+      <input type="text" name="userUrl" class="form-control" value="{{ cdn.userUrl|default('') }}" placeholder='不填将默认是URL'>
+  
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-md-2 control-label">CONTENTURL</label>
+    <div class="col-md-8 controls">
+      <input type="text" name="contentUrl" class="form-control" value="{{ cdn.contentUrl|default('') }}" placeholder='不填将默认是URL'>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <label class="col-md-2 control-label">FRONTURL</label>
+    <div class="col-md-8 controls">
+      <input type="text" name="frontUrl" class="form-control" value="{{ cdn.frontUrl|default('') }}" placeholder='不填将默认是URL'>
     </div>
   </div>
 
