--- a/src/Topxia/AdminBundle/Resources/views/System/default-avatar.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/default-avatar.html.twig
@@ -6,7 +6,7 @@ style="display:none;"
   <div class="col-md-8 control-label"><b>自定义默认头像</b></div>
   <form id="avatar-form" method="post">
     <div class="controls col-md-8 controls">
-      <img src="{{ system_default_path('avatar.png' ) }}">
+      <img src="{{ filepath('','avatar.png' ) }}">
     </div>
 
     <div class="form-group">
