--- a/src/Topxia/AdminBundle/Resources/views/System/default-course-picture.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/System/default-course-picture.html.twig
@@ -7,7 +7,7 @@ style="display:none;"
 <div class="col-md-8 control-label"><b>自定义默认课程图片</b></div>
   <form id="course-picture-form" method="post" >
     <div class="controls col-md-8 controls">
-      <img src="{{ system_default_path('course.png' ) }}">
+      <img src="{{ filepath('','course.png' ) }}">
     </div>
 
     <div class="form-group">
