--- a/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/script_boot.html.twig
@@ -52,11 +52,10 @@
   app.cloudSdkCdn = '{{ setting("developer.cloud_sdk_cdn") }}';
   app.mainScript = '{{ script_main }}';
 </script>
-{% if setting('cdn.enabled') %} {% set cdnUrl = setting('cdn.url') %} {% else %} {% set cdnUrl = '' %} {% endif %}
-<script src="{{ cdnUrl }}{{ asset('assets/libs/seajs/seajs/2.2.1/sea.js') }}"></script>
-<script src="{{ cdnUrl }}{{ asset('assets/libs/seajs/seajs-style/1.0.2/seajs-style.js') }}"></script>
-<script src="{{ cdnUrl }}{{ asset('assets/libs/seajs/seajs-text/1.1.1/seajs-text.min.js') }}"></script>
-<script src="{{ cdnUrl }}{{ asset('assets/libs/seajs-global-config.js') }}"></script>
+<script src="{{ asset('assets/libs/seajs/seajs/2.2.1/sea.js') }}"></script>
+<script src="{{ asset('assets/libs/seajs/seajs-style/1.0.2/seajs-style.js') }}"></script>
+<script src="{{ asset('assets/libs/seajs/seajs-text/1.1.1/seajs-text.min.js') }}"></script>
+<script src="{{ asset('assets/libs/seajs-global-config.js') }}"></script>
 <script>
   seajs.use(app.mainScript);
 </script>
