--- a/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
+++ b/src/Org/OrgBundle/Resources/views/OrgManage/index.html.twig
@@ -5,7 +5,11 @@
 {% set menu = 'admin_org' %}
 
 {% block main %}
-
+<style>
+  .col-md-1 {
+    padding: 0px;
+  }
+</style>
 
   <ul class="list-table" id="org-table" style="margin-bottom: 0">
     <li class="th">
