--- a/src/Custom/WebBundle/Resources/views/My/layout.html.twig
+++ b/src/Custom/WebBundle/Resources/views/My/layout.html.twig
@@ -28,7 +28,7 @@
             <li class="list-group-heading">{{'我的教学'|trans}}</li>
             <li class="list-group-item
              {% if side_nav == 'my-teaching-courses' %} active {% endif %}">
-              <a href="{{path('my_teaching_courses')}}">{{'在教课程'|trans}}</a>
+              <a href="{{path('my_teaching_courses')}}">{{'中心课程'|trans}}</a>
             </li>
           </ul>
         {% else %}
