--- a/src/Custom/WebBundle/Resources/views/MyTeaching/teaching.html.twig
+++ b/src/Custom/WebBundle/Resources/views/MyTeaching/teaching.html.twig
@@ -41,13 +41,18 @@
           {% if course.status == 'published' %}
             <tr>
               <td>
-
-                <a class="pull-left mrm" href="{{ path('course_show', {id:course.id}) }}">
-                  <img class="course-picture" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="{{ course.title }}" width="100">
-                </a>
+                {% if 'ROLE_CENTER_ADMIN' in app.user.roles %}
+                  <a class="pull-left mrm" href="javascript:;">
+                    <img class="course-picture" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="{{ course.title }}" width="100">
+                  </a>
+                {% else %}
+                  <a class="pull-left mrm" href="{{ path('course_show', {id:course.id}) }}">
+                    <img class="course-picture" src="{{ filepath(course.middlePicture, 'course.png') }}" alt="{{ course.title }}" width="100">
+                  </a>
+                {% endif %}
 
                 <div class="mlm">
-                  <a href="javascript:;">{{ course.title }}</a>
+                  <a {% if 'ROLE_CENTER_ADMIN' in app.user.roles %}href="javascript:;"{% else %}href="{{ path('course_show', {id:course.id}) }}"{% endif %}>{{ course.title }}</a>
                   {% if course.type == 'live' %}
                     <span class="label label-success live-label">{{'直播'|trans}}</span>
                   {% endif  %}
